<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FA090505"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/idTvResult"
        android:layout_width="285dp"
        android:layout_height="47dp"
        android:layout_marginTop="40dp"
        android:textAlignment="textEnd"
        android:background="@drawable/rounder_corner"
        android:shadowRadius="10"
        android:text="@string/str_tv_result"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="370dp" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="230dp"
        android:layout_height="243dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/idTvResult">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/idBtnN7"
                android:layout_width="70dp"
                android:layout_height="55dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/panel_integers"
                android:text="@string/str_btn_n7"
                android:textSize="24sp" />

            <Button
                android:id="@+id/idBtnN8"
                android:layout_width="70dp"
                android:layout_height="55dp"
                android:layout_marginLeft="2.5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/panel_integers"
                android:text="@string/str_btn_n8"
                android:textSize="24sp" />

            <Button
                android:id="@+id/idBtnN9"
                android:layout_width="70dp"
                android:layout_height="55dp"
                android:layout_marginLeft="2.5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/panel_integers"
                android:text="@string/str_btn_n9"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/idBtnN4"
                android:layout_width="70dp"
                android:layout_height="55dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/panel_integers"
                android:text="@string/str_btn_n4"
                android:textSize="24sp" />

            <Button
                android:id="@+id/idBtnN5"
                android:layout_width="70dp"
                android:layout_height="55dp"
                android:layout_marginLeft="2.5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/panel_integers"
                android:text="@string/str_btn_n5"
                android:textSize="24sp" />

            <Button
                android:id="@+id/idBtnN6"
                android:layout_width="70dp"
                android:layout_height="55dp"
                android:layout_marginLeft="2.5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/panel_integers"
                android:text="@string/str_btn_n6"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/idBtnN1"
                android:layout_width="70dp"
                android:layout_height="55dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/panel_integers"
                android:text="@string/str_btn_n1"
                android:textSize="24sp" />

            <Button
                android:id="@+id/idBtnN2"
                android:layout_width="70dp"
                android:layout_height="55dp"
                android:layout_marginLeft="2.5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/panel_integers"
                android:text="@string/str_btn_n2"
                android:textSize="24sp" />

            <Button
                android:id="@+id/idBtnN3"
                android:layout_width="70dp"
                android:layout_height="55dp"
                android:layout_marginLeft="2.5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/panel_integers"
                android:text="@string/str_btn_n3"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/idBtnReset"
                android:layout_width="70dp"
                android:layout_height="55dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/panel_integers"
                android:text="@string/str_btn_del"
                android:textSize="24sp" />

            <Button
                android:id="@+id/idBtnN0"
                android:layout_width="70dp"
                android:layout_height="55dp"
                android:layout_marginLeft="2.5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/panel_integers"
                android:text="@string/str_btn_n0"
                android:textSize="24sp" />

            <Button
                android:id="@+id/idBtnPoint"
                android:layout_width="70dp"
                android:layout_height="55dp"
                android:layout_marginLeft="2.5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/panel_integers"
                android:text="@string/str_btn_point"
                android:textSize="24sp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="90dp"
        android:layout_height="243dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/tableLayout"
        app:layout_constraintTop_toTopOf="@+id/tableLayout">

        <Button
            android:id="@+id/idBtnDivide"
            android:layout_width="84.7dp"
            android:layout_height="55dp"
            android:layout_marginLeft="2.5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="2.5dp"
            android:background="@drawable/operator_style"
            android:text="@string/str_btn_divide"
            android:textSize="30sp" />

        <Button
            android:id="@+id/idBtnMultiply"
            android:layout_width="84.7dp"
            android:layout_height="55dp"
            android:layout_marginLeft="2.5dp"
            android:layout_marginTop="2.5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="2.5dp"
            android:background="@drawable/operator_style"
            android:text="@string/str_btn_multiply"
            android:textSize="24sp" />

        <Button
            android:id="@+id/idBtnSubtract"
            android:layout_width="84.7dp"
            android:layout_height="55dp"
            android:layout_marginLeft="2.5dp"
            android:layout_marginTop="2.5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="2.5dp"
            android:background="@drawable/operator_style"
            android:text="@string/str_btn_subtract"
            android:textSize="36sp" />

        <Button
            android:id="@+id/idBtnAdd"
            android:layout_width="84.7dp"
            android:layout_height="55dp"
            android:layout_marginLeft="2.5dp"
            android:layout_marginTop="2.5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/operator_style"
            android:text="@string/str_btn_add"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="161dp"
        android:layout_height="77dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2">

        <Button
            android:id="@+id/idBtnEqual"
            android:layout_width="161dp"
            android:layout_height="70dp"
            android:layout_marginLeft="2.5dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:background="@drawable/style_btn_bottom"
            android:text="@string/str_equal"
            android:textSize="36sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="161dp"
        android:layout_height="77dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <Button
            android:layout_width="161dp"
            android:layout_height="70dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="2.5dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:background="@drawable/style_btn_bottom"
            android:text="@string/str_almunia" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>